--- a/index.html
+++ b/index.html
@@ -2,24 +2,174 @@
 <html lang="kk">
 <head>
     <meta charset="UTF-8">
-    <title>Үйлену тойына шақыру</title>
+    <title>Үйлену тойына шақыру | Дос 1 & Дос 2</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #fafafa;
+            margin: 0;
+            padding: 20px;
+        }
+        .container {
+            max-width: 500px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+        }
+        button {
+            margin-top: 10px;
+            padding: 10px;
+            width: 100%;
+            cursor: pointer;
+        }
+        .lang {
+            text-align: right;
+            margin-bottom: 10px;
+        }
+        input, textarea {
+            width: 100%;
+            padding: 8px;
+            margin-top: 5px;
+        }
+        .hidden {
+            display: none;
+        }
+        .error {
+            color: red;
+        }
+        .success {
+            color: green;
+        }
+    </style>
 </head>
 <body>
+<div class="container">
 
-    <h1>Құрметті қонақ!</h1>
+    <!-- Переключатель языка -->
+    <div class="lang">
+        <button onclick="setLang('kz')">KZ</button>
+        <button onclick="setLang('ru')">RU</button>
+    </div>
 
-    <p>
-        Сізді біздің үйлену тойымызға қуана шақырамыз.
-    </p>
+    <!-- Текст -->
+    <h2 id="title">Үйлену тойына шақыру</h2>
+    <p id="text">Біздің үйлену тойымызға келсеңіздер қуаныштымыз!</p>
 
-    <p>
-        Өтетін күні: <strong>20.07.2026</strong><br>
-        Өтетін орны: <strong>Астана қаласы</strong>
-    </p>
+    <!-- Форма -->
+    <form id="rsvpForm">
+        <input type="text" id="name" placeholder="Аты">
+        <br><br>
+        <input type="text" id="surname" placeholder="Тегі">
+        <br><br>
 
-    <p>
-        Келетініңізді растауыңызды сұраймыз.
-    </p>
+        <label>
+            <input type="radio" name="answer" value="alone"> Жалғыз келемін
+        </label><br>
+
+        <label>
+            <input type="radio" name="answer" value="withSomeone"> Біреумен келемін
+        </label><br>
+
+        <label>
+            <input type="radio" name="answer" value="notComing"> Келе алмаймын
+        </label><br><br>
+
+        <!-- Комментарий, появится только если выбрано "с кем-то" -->
+        <textarea id="comment" class="hidden" placeholder="Кіммен келетініңізді жазыңыз"></textarea>
+        <br>
+
+        <button type="button" onclick="submitForm()">Жіберу</button>
+    </form>
+
+    <p id="message" class=""></p>
+
+</div>
+
+<script>
+// --- Языки ---
+function setLang(lang) {
+    if(lang === 'ru'){
+        document.getElementById('title').innerText = 'Приглашение на свадьбу';
+        document.getElementById('text').innerText = 'Мы будем рады видеть вас на нашей свадьбе!';
+        document.getElementById('name').placeholder = 'Имя';
+        document.getElementById('surname').placeholder = 'Фамилия';
+        document.querySelector('input[value="alone"]').parentNode.innerText = 'Приду один / одна';
+        document.querySelector('input[value="alone"]').parentNode.prepend(document.querySelector('input[value="alone"]'));
+        document.querySelector('input[value="withSomeone"]').parentNode.innerText = 'Приду с кем-то';
+        document.querySelector('input[value="withSomeone"]').parentNode.prepend(document.querySelector('input[value="withSomeone"]'));
+        document.querySelector('input[value="notComing"]').parentNode.innerText = 'Не смогу прийти';
+        document.querySelector('input[value="notComing"]').parentNode.prepend(document.querySelector('input[value="notComing"]'));
+        document.getElementById('comment').placeholder = 'С кем будете приходить';
+        document.querySelector('button').innerText = 'Отправить';
+    } else {
+        document.getElementById('title').innerText = 'Үйлену тойына шақыру';
+        document.getElementById('text').innerText = 'Біздің үйлену тойымызға келсеңіздер қуаныштымыз!';
+        document.getElementById('name').placeholder = 'Аты';
+        document.getElementById('surname').placeholder = 'Тегі';
+        document.querySelector('input[value="alone"]').parentNode.innerText = 'Жалғыз келемін';
+        document.querySelector('input[value="alone"]').parentNode.prepend(document.querySelector('input[value="alone"]'));
+        document.querySelector('input[value="withSomeone"]').parentNode.innerText = 'Біреумен келемін';
+        document.querySelector('input[value="withSomeone"]').parentNode.prepend(document.querySelector('input[value="withSomeone"]'));
+        document.querySelector('input[value="notComing"]').parentNode.innerText = 'Келе алмаймын';
+        document.querySelector('input[value="notComing"]').parentNode.prepend(document.querySelector('input[value="notComing"]'));
+        document.getElementById('comment').placeholder = 'Кіммен келетініңізді жазыңыз';
+        document.querySelector('button').innerText = 'Жіберу';
+    }
+}
+
+// --- Показать/скрыть комментарий ---
+document.getElementsByName('answer').forEach(radio => {
+    radio.addEventListener('change', function() {
+        if(this.value === 'withSomeone') {
+            document.getElementById('comment').classList.remove('hidden');
+        } else {
+            document.getElementById('comment').classList.add('hidden');
+        }
+    });
+});
+
+// --- Проверка формы и отправка ---
+function submitForm() {
+    const name = document.getElementById('name').value.trim();
+    const surname = document.getElementById('surname').value.trim();
+    const radios = document.getElementsByName('answer');
+    const comment = document.getElementById('comment').value.trim();
+    const message = document.getElementById('message');
+
+    // Проверка имени и фамилии
+    if(!name || !surname) {
+        message.className = 'error';
+        message.innerText = 'Өтінеміз, аты-жөніңізді толық толтырыңыз / Пожалуйста, введите имя и фамилию';
+        return;
+    }
+
+    // Проверка выбора ответа
+    let selected = null;
+    for(let r of radios){
+        if(r.checked) selected = r.value;
+    }
+    if(!selected) {
+        message.className = 'error';
+        message.innerText = 'Өтінеміз, жауап таңдаңыз / Пожалуйста, выберите вариант';
+        return;
+    }
+
+    // Проверка комментария, если выбран "с кем-то"
+    if(selected === 'withSomeone' && !comment) {
+        message.className = 'error';
+        message.innerText = 'Өтінеміз, кіммен келетініңізді жазыңыз / Пожалуйста, укажите, с кем придете';
+        return;
+    }
+
+    // Всё ок
+    message.className = 'success';
+    message.innerText = 'Рахмет! Сіздің жауабыңыз қабылданды / Спасибо! Ваш ответ принят';
+    
+    // Здесь можно добавить отправку на Google Forms или Sheets
+}
+</script>
 
 </body>
 </html>
